@@ -1,3 +1,6 @@
+2007-08-18  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
+	* src/docgen/GtkPrint.py: Text report generation done.
+
 2007-08-18  Brian Matherly <brian@gramps-project.org>
 	* src/ViewManager.py
 	* src/plugins/rel_fr.py
